adding new photo and music pages, editing description on side bar

--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 name: Catherine Smith
 job_title: Data Analytics + Web Dev
 email: eastandwestwind@gmail.com
-description: I'm a person
+description: My expertise is in user behavior analytics and front-end web development. I enjoy learning new things, being outdoors, and art in all its forms. Also cats.
 avatar: /avatar.png
 favicon: /avatar.png
 twitter_handler: your_handler
-analytics_code: UA-XXXXXXX-2
+analytics_code: UA-64729638-1
 disqus: eastandwestwind.disqus.com
 
 # Social Accounts
